--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -30,6 +30,18 @@ form input {
   padding: 0 24px;
 }
 
+form textarea {
+  width: 100%;
+  min-height: 140px;
+  height: 60px;
+  color: #333;
+  border: 1px solid #dcdce6;
+  border-radius: 8px;
+  padding: 16px 24px;
+  line-height: 24px;
+  resize: vertical;
+}
+
 .button {
   width: 100%;
   height: 60px;
@@ -51,7 +63,7 @@ form input {
   filter: brightness(90%);
 }
 
-.bank-link {
+.back-link {
   display: flex;
   align-items: center;
   margin-top: 40px;
@@ -62,10 +74,10 @@ form input {
   transition: opacity 0.2s;
 }
 
-.bank-link svg {
+.back-link svg {
   margin-right: 8px;
 }
 
-.bank-link {
+.back-link {
   opacity: 0.8s;
 }
